Feat: Campaign API pt 1(refs: DPIM-18)
